# CompilerPrincipleHomework

./: .gitignore  .ocamlformat  dot.dot  dune-project  plot-ast.sh  plot.sh  readme.md  run-all.sh
input-examples/: all-inputs.cmm
input-examples/expects/: C-1.exp  C-2.exp  D-3.exp  E3-1.exp
input-examples/inputs/: .directory  D-2.cmm  E2-1.cmm  E2-2.cmm
